@@ -1,6 +1,6 @@
 # Group Manager
 
-### Version: 0.8.3 (in progress)
+### Version: 0.8.4 (in progress)
 
 ### Introduction
 
@@ -12,7 +12,7 @@ Please see the CHANGES.current file for a detailed list of bug fixes and
 new features for the current release. The CHANGES file contains bug fixes
 and new features for older versions.
 
-### iClone Version : 7.4.1206
+### iClone Version : 7.4.1212
 
 
  -- Reallusion Maintainers
