@@ -5,6 +5,9 @@ and CHANGES files.
 Release Notes
 =============
 
+LayerManager-0.8.4 summary:
+- Add Delete Funciton.
+
 LayerManager-0.8.3 summary:
 - Adjust Layout and clean code.
 
